--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,7 +31,7 @@
         </div>
         <% end %>
 
-        <%= image_tag post.photo ,class:"aspect-[16/9] rounded-xl shadow-lg border border-gray-200"%>
+        <%= image_tag post.photo ,class:"aspect-[16/9] object-cover rounded-xl shadow-lg border border-gray-200"%>
 
         <%= render partial: 'likes', locals: {post: post} %>
         <h1 class="-mt-2 text-gray-800 font-medium">
