--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
         </div>
         <% end %>
     </div>
-    <%= image_tag post.photo ,class:"aspect-[16/9] rounded-xl shadow-lg border border-gray-200"%>
+    <%= image_tag post.photo ,class:"aspect-[16/9] object-cover rounded-xl shadow-lg border border-gray-200"%>
     <%= render partial: 'posts/likes', locals: {post: post} %>
       <h1 class="-mt-2 text-gray-800 font-medium">
             <%= post.description %>
