--- a/app/views/Navbar/_navbar.html.erb
+++ b/app/views/Navbar/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="h-20 relative border-gray-200 backdrop-blur-xl border-b-[1px] border-gray-300 font-dosis max-w-6xl mx-auto px-4 lg:px-0 sticky top-0 z-10">
+<nav class="h-20 relative border-gray-200 backdrop-blur-xl border-b-[1px] border-gray-300 font-dosis max-w-6xl mx-auto px-4 xl:px-0 sticky top-0 z-10">
     <div class="flex mx-auto h-full items-center justify-between w-full">
         <a href="/" class="flex bg-gradient-to-l from-red-600 to-purple-500 bg-clip-text  items-center space-x-3 rtl:space-x-reverse">
             <span class="self-center text-transparent text-2xl font-semibold whitespace-nowrap font-pacifico text-[30px] tracking-[1px] italic text-[#337ab7]">Instapost</span>
