--- a/app/views/Navbar/_navbar.html.erb
+++ b/app/views/Navbar/_navbar.html.erb
@@ -50,8 +50,13 @@
                     <%= link_to 'Log In', login_path, class:"block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0" %>
                 </li>
                 <% end %>
+                <%
+=begin%>
+ <h1>ola</h1> 
+<%
+=end%>
             </ul>
         </div>
     </div>
-
+  
 </nav>
